# GearCutter

./: CMakeLists.txt
cpp/python/: gear_cutter_python.cpp
cpp/src/: gear_cutter.h  gear_cutter_impl.cpp  gear_cutter_main.cpp
cpp/tests/: test.py
fortran/src/: gear_cutter_main.f90
rust/: Cargo.toml
rust/python/: Cargo.toml  python_bindings.rs
rust/src/: lib.rs  main.rs
rust/tests/: test.py
